2008-09-05  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* README: Convert to reStructured Text format.
	* doc/README.html: Automatically generated from README.
	* Makefile.am: Add target to generate README.html.

2008-09-03  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* lib/python/vasputil/geometry.py: New file.
	* lib/python/vasputil/__init__.py: add geometry.

2008-08-28  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* lib/python/vasputil/dosplot.py: Rename to dos.py
	* bin/vasputil_zlayers: New file.
	* bin/dosplot_example: Use updated dos.py, rename to vasputil_dosplot.
	* lib/m: Remove all MATLAB scripts.

2008-08-27  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* lib/python/vasputil/supercell.py: Change to use list of atomic
	symbols.
	(add): New method.
	(sortAtoms): New method.
	(getAtomSymbolCount): New method.
	(write_poscar): Make format match VASP.
	(write_xyz): Make format match OpenBabel.

2008-08-26  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* bin/vasputil_interpolate: New file.
	* bin/interpolate4.in: Remove.
	* bin/Makefile.am: Remove reference to interpolate4.in
	* setup.py: Add bin/vasputil_interpolate to scripts.

2008-08-25  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* lib/python/vasputil/{__init__.py,dosplot.py,supercell.py}: New
	files.
	* bin/dosplot_example: New file.
	* setup.py: New file.
	* Makefile.am: Install python scripts via distutils.
	* configure.ac: Call AM_PATH_PYTHON.

2008-08-20  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* src/supercell_modify.f90 (unnormalize): Fix unnormalization when
	coordinate is < 0.5.

2008-08-07  Janne Blomqvist  <Janne.Blomqvist@tkk.fi>

	* config/acx_subst_fcflags.m4: More checking for ifort, use f2003 mode
	for gfortran, allow gfortran to be called gfortran*.
	* config/acx_fc_command_line.m4: New file, autoconf macro for checking
	command line support. Copied from octopus (tddft.org).
	* configure.ac: Run ACX_FC_COMMAND_LINE_ARGUMENTS macro, new contact
	info.
	* src/f2kcli.f90: Delete.