@@ -1,5 +1,5 @@
 #!/bin/bash
 
 cp vasputil-*.tar.gz ~/public_html/vasputil
-cp README ~/public_html/vasputil
+cp doc/README.html ~/public_html/vasputil
 chmod a+r ~/public_html/vasputil/*
