@@ -1,424 +1,0 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
-<title>Vasputil release 4.2</title>
-<style type="text/css">
-
-/*
-:Author: David Goodger
-:Contact: goodger@users.sourceforge.net
-:Date: $Date: 2005-12-18 01:56:14 +0100 (Sun, 18 Dec 2005) $
-:Revision: $Revision: 4224 $
-:Copyright: This stylesheet has been placed in the public domain.
-
-Default cascading style sheet for the HTML output of Docutils.
-
-See http://docutils.sf.net/docs/howto/html-stylesheets.html for how to
-customize this style sheet.
-*/
-
-/* used to remove borders from tables and images */
-.borderless, table.borderless td, table.borderless th {
-  border: 0 }
-
-table.borderless td, table.borderless th {
-  /* Override padding for "table.docutils td" with "! important".
-     The right padding separates the table cells. */
-  padding: 0 0.5em 0 0 ! important }
-
-.first {
-  /* Override more specific margin styles with "! important". */
-  margin-top: 0 ! important }
-
-.last, .with-subtitle {
-  margin-bottom: 0 ! important }
-
-.hidden {
-  display: none }
-
-a.toc-backref {
-  text-decoration: none ;
-  color: black }
-
-blockquote.epigraph {
-  margin: 2em 5em ; }
-
-dl.docutils dd {
-  margin-bottom: 0.5em }
-
-/* Uncomment (and remove this text!) to get bold-faced definition list terms
-dl.docutils dt {
-  font-weight: bold }
-*/
-
-div.abstract {
-  margin: 2em 5em }
-
-div.abstract p.topic-title {
-  font-weight: bold ;
-  text-align: center }
-
-div.admonition, div.attention, div.caution, div.danger, div.error,
-div.hint, div.important, div.note, div.tip, div.warning {
-  margin: 2em ;
-  border: medium outset ;
-  padding: 1em }
-
-div.admonition p.admonition-title, div.hint p.admonition-title,
-div.important p.admonition-title, div.note p.admonition-title,
-div.tip p.admonition-title {
-  font-weight: bold ;
-  font-family: sans-serif }
-
-div.attention p.admonition-title, div.caution p.admonition-title,
-div.danger p.admonition-title, div.error p.admonition-title,
-div.warning p.admonition-title {
-  color: red ;
-  font-weight: bold ;
-  font-family: sans-serif }
-
-/* Uncomment (and remove this text!) to get reduced vertical space in
-   compound paragraphs.
-div.compound .compound-first, div.compound .compound-middle {
-  margin-bottom: 0.5em }
-
-div.compound .compound-last, div.compound .compound-middle {
-  margin-top: 0.5em }
-*/
-
-div.dedication {
-  margin: 2em 5em ;
-  text-align: center ;
-  font-style: italic }
-
-div.dedication p.topic-title {
-  font-weight: bold ;
-  font-style: normal }
-
-div.figure {
-  margin-left: 2em ;
-  margin-right: 2em }
-
-div.footer, div.header {
-  clear: both;
-  font-size: smaller }
-
-div.line-block {
-  display: block ;
-  margin-top: 1em ;
-  margin-bottom: 1em }
-
-div.line-block div.line-block {
-  margin-top: 0 ;
-  margin-bottom: 0 ;
-  margin-left: 1.5em }
-
-div.sidebar {
-  margin-left: 1em ;
-  border: medium outset ;
-  padding: 1em ;
-  background-color: #ffffee ;
-  width: 40% ;
-  float: right ;
-  clear: right }
-
-div.sidebar p.rubric {
-  font-family: sans-serif ;
-  font-size: medium }
-
-div.system-messages {
-  margin: 5em }
-
-div.system-messages h1 {
-  color: red }
-
-div.system-message {
-  border: medium outset ;
-  padding: 1em }
-
-div.system-message p.system-message-title {
-  color: red ;
-  font-weight: bold }
-
-div.topic {
-  margin: 2em }
-
-h1.section-subtitle, h2.section-subtitle, h3.section-subtitle,
-h4.section-subtitle, h5.section-subtitle, h6.section-subtitle {
-  margin-top: 0.4em }
-
-h1.title {
-  text-align: center }
-
-h2.subtitle {
-  text-align: center }
-
-hr.docutils {
-  width: 75% }
-
-img.align-left {
-  clear: left }
-
-img.align-right {
-  clear: right }
-
-ol.simple, ul.simple {
-  margin-bottom: 1em }
-
-ol.arabic {
-  list-style: decimal }
-
-ol.loweralpha {
-  list-style: lower-alpha }
-
-ol.upperalpha {
-  list-style: upper-alpha }
-
-ol.lowerroman {
-  list-style: lower-roman }
-
-ol.upperroman {
-  list-style: upper-roman }
-
-p.attribution {
-  text-align: right ;
-  margin-left: 50% }
-
-p.caption {
-  font-style: italic }
-
-p.credits {
-  font-style: italic ;
-  font-size: smaller }
-
-p.label {
-  white-space: nowrap }
-
-p.rubric {
-  font-weight: bold ;
-  font-size: larger ;
-  color: maroon ;
-  text-align: center }
-
-p.sidebar-title {
-  font-family: sans-serif ;
-  font-weight: bold ;
-  font-size: larger }
-
-p.sidebar-subtitle {
-  font-family: sans-serif ;
-  font-weight: bold }
-
-p.topic-title {
-  font-weight: bold }
-
-pre.address {
-  margin-bottom: 0 ;
-  margin-top: 0 ;
-  font-family: serif ;
-  font-size: 100% }
-
-pre.literal-block, pre.doctest-block {
-  margin-left: 2em ;
-  margin-right: 2em ;
-  background-color: #eeeeee }
-
-span.classifier {
-  font-family: sans-serif ;
-  font-style: oblique }
-
-span.classifier-delimiter {
-  font-family: sans-serif ;
-  font-weight: bold }
-
-span.interpreted {
-  font-family: sans-serif }
-
-span.option {
-  white-space: nowrap }
-
-span.pre {
-  white-space: pre }
-
-span.problematic {
-  color: red }
-
-span.section-subtitle {
-  /* font-size relative to parent (h1..h6 element) */
-  font-size: 80% }
-
-table.citation {
-  border-left: solid 1px gray;
-  margin-left: 1px }
-
-table.docinfo {
-  margin: 2em 4em }
-
-table.docutils {
-  margin-top: 0.5em ;
-  margin-bottom: 0.5em }
-
-table.footnote {
-  border-left: solid 1px black;
-  margin-left: 1px }
-
-table.docutils td, table.docutils th,
-table.docinfo td, table.docinfo th {
-  padding-left: 0.5em ;
-  padding-right: 0.5em ;
-  vertical-align: top }
-
-table.docutils th.field-name, table.docinfo th.docinfo-name {
-  font-weight: bold ;
-  text-align: left ;
-  white-space: nowrap ;
-  padding-left: 0 }
-
-h1 tt.docutils, h2 tt.docutils, h3 tt.docutils,
-h4 tt.docutils, h5 tt.docutils, h6 tt.docutils {
-  font-size: 100% }
-
-tt.docutils {
-  background-color: #eeeeee }
-
-ul.auto-toc {
-  list-style-type: none }
-
-</style>
-</head>
-<body>
-<div class="document" id="vasputil-release-4-2">
-<h1 class="title">Vasputil release 4.2</h1>
-<p>Vasputil is a set of command-line utilities and python libraries designed to
-make life with VASP easier. It provides a set of commands to manipulate POSCAR
-files.</p>
-<p>Available commands via the <tt class="docutils literal"><span class="pre">vasputil</span></tt> binary are:</p>
-<dl class="docutils">
-<dt>poscar2xyz</dt>
-<dd>Convert a POSCAR file to a xyz format file.</dd>
-<dt>plane2atom</dt>
-<dd>Calculate the average distance from a plane to a set of atoms.</dd>
-<dt>plane2layer</dt>
-<dd>Calculate the average distance from a plane to a layer.</dd>
-<dt>atomsdistance</dt>
-<dd>Calculate the distance between two atoms.</dd>
-<dt>atomsmoved</dt>
-<dd>Check which atoms have moved from one POSCAR to another.</dd>
-<dt>interpolate</dt>
-<dd>Interpolate the coordinates between two POSCAR files.</dd>
-<dt>normalize</dt>
-<dd>Normalize the coordinates in a POSCAR file.</dd>
-<dt>unnormalize</dt>
-<dd>Unnormalize coordinates in a POSCAR file.</dd>
-<dt>centercell</dt>
-<dd>Center a cell around a point.</dd>
-<dt>removeatoms</dt>
-<dd>Remove atoms from a POSCAR file.</dd>
-<dt>kspace2xyz</dt>
-<dd>Convert a POSCAR file to a xyz file with reciprocal coordinates.</dd>
-<dt>check_nndist</dt>
-<dd>Check nearest neighbor distances.</dd>
-<dt>scgenerator</dt>
-<dd>Generate a supercell.</dd>
-<dt>lockatoms</dt>
-<dd>Lock atom coordinates in a supercell.</dd>
-<dt>xyz2poscar</dt>
-<dd>Convert a XYZ file to a POSCAR file.</dd>
-<dt>dumpcoords</dt>
-<dd>Dump cartesian coordinates to stdout.</dd>
-<dt>importcoords</dt>
-<dd>Read cartesian coordinates from stdin.</dd>
-<dt>dumpatomsase</dt>
-<dd>Dump atom types and coordinates suitable for importing to Campos ASE.</dd>
-<dt>test</dt>
-<dd>Run self-tests.</dd>
-</dl>
-<p>Documentation for each utility is available by running it without any
-arguments, e.g. <tt class="docutils literal"><span class="pre">vasputil</span> <span class="pre">poscar2xyz</span></tt>.</p>
-<p>In addition to the above, vasputil contains some Python scripts, which can be
-used directly or as examples of what can be done with the provided python
-modules.  These are</p>
-<dl class="docutils">
-<dt><tt class="docutils literal"><span class="pre">vasputil_dosplot</span></tt></dt>
-<dd>Plot density-of-states.</dd>
-<dt><tt class="docutils literal"><span class="pre">vasputil_interpolate</span></tt></dt>
-<dd>Wrapper around &quot;vasputil interpolate&quot; for creating many evenly spaced images at once.</dd>
-<dt><tt class="docutils literal"><span class="pre">vasputil_zlayers</span></tt></dt>
-<dd>Find layers in z direction and print interlayer distances.</dd>
-</dl>
-<p>Vasputil is written mostly the Fortran 95 programming language with a few
-optional Fortran 2003 features such as command line argument handling, and
-should be compilable by any compiler that conforms to said standard.  Vasputil
-uses the common GNU autotools based build system, and has been tested with IBM
-xlf95, Lahey lf95, Pathscale pathf90, Intel ifort, GNU Fortran (Gfortran), and
-Portland pgf90. Parts of vasputil are also written in Python, see below for
-requirements.</p>
-<p>Vasputil depends on the LAPACK and BLAS libraries. The provided autotools build
-system tries to use different platform-specific optimized versions of the BLAS
-library; ESSL on IBM, the BLAS that is provided with the Lahey compiler, and
-the Portland and Pathscale Makefiles use the AMD ACML library.</p>
-<p>To regenerate the Fortran source code documentation (file doc/vasputil.html),
-the <a class="reference" href="http://www.xs4all.nl/~rfsber/Robo/">robodoc</a> utility is needed. To
-regenerate the README.html file, the <a class="reference" href="http://docutils.sourceforge.net/docs/user/tools.html">rst2html</a> utility is needed.
-Finally, to regenerate the dependency list, the <a class="reference" href="http://personal.inet.fi/private/erikedelmann/makedepf90/">makedepf90</a> utility is needed.</p>
-<div class="section">
-<h1><a id="quick-installation-instructions" name="quick-installation-instructions">Quick Installation Instructions</a></h1>
-<ol class="arabic">
-<li><p class="first">Unpack the source code.</p>
-<p><tt class="docutils literal"><span class="pre">tar</span> <span class="pre">xvzf</span> <span class="pre">vasputil-$(VERSION).tar.gz</span></tt></p>
-</li>
-<li><p class="first">Run configure, if necessary with extra flags to specify location of
-libraries not in the default search path, if you want to use some specific
-compiler etc.</p>
-<p>Eg. to use dynamically linked ACML:</p>
-<p><tt class="docutils literal"><span class="pre">./configure</span> <span class="pre">LDFLAGS=-L/opt/acml/pathscale64/lib/</span></tt></p>
-<p>Statically linked ACML</p>
-<p><tt class="docutils literal"><span class="pre">./configure</span> <span class="pre">--with-blas=/opt/acml/pathscale64/lib/libacml.a</span></tt></p>
-<p>Use Intel Fortran</p>
-<p><tt class="docutils literal"><span class="pre">./configure</span> <span class="pre">FC=ifort</span></tt></p>
-<p>Install somewhere not in the default location ($HOME)</p>
-<p><tt class="docutils literal"><span class="pre">./configure</span> <span class="pre">--prefix=/usr/local</span></tt></p>
-<p>For help, see</p>
-<p><tt class="docutils literal"><span class="pre">./configure</span> <span class="pre">--help</span></tt></p>
-</li>
-<li><p class="first">Compile and install.</p>
-<p><tt class="docutils literal"><span class="pre">make</span> <span class="pre">&amp;&amp;</span> <span class="pre">make</span> <span class="pre">install</span></tt></p>
-</li>
-</ol>
-</div>
-<div class="section">
-<h1><a id="python-scripts" name="python-scripts">Python Scripts</a></h1>
-<p>To use the python scripts you should add the python library directory to the
-PYTHONPATH environment variable. E.g. if you ran configure with the prefix
-$HOME (default), then you should have something like</p>
-<p><tt class="docutils literal"><span class="pre">export</span> <span class="pre">PYTHONPATH=$HOME/lib/pythonX.Y/site-packages</span></tt></p>
-<p>where X.Y is your python version, in your shell initialization file (e.g.
-~/.bash_profile). On the other hand, if you installed into the system default
-location, you probably don't need to do anything.</p>
-<p>Also, some of the python scripts and the library modules use the <a class="reference" href="http://matplotlib.sf.net">matplotlib</a> library.  Matplotlib requires some other libraries
-(e.g.  <a class="reference" href="http://numpy.scipy.org">NumPy</a>), and if you don't have access to a
-package management system (e.g. on Linux) which includes matplotlib and its
-dependencies, you can get all at once by installing one of the python
-distributions targeted at science, such as SAGE, Enthought Python Distribution,
-or Python(x,y). Another solution if you already have python installed, is to
-install matplotlib and other libraries via <em>easy_install</em> from setuptools (a
-sort of package management system for python packages).</p>
-<div class="section">
-<h2><a id="interactive-usage" name="interactive-usage">Interactive Usage</a></h2>
-<p>The python modules are designed to be used from the interactive python prompt
-as well, to provide a sort of MATLAB-like interactive environment where you can
-manipulate coordinates stored in arrays, or plot data etc. For this, the
-<a class="reference" href="http://ipython.scipy.org/moin/">IPython</a> enhanced interactive environment is
-recommended. Start with the matplotlib stuff preloaded with <tt class="docutils literal"><span class="pre">ipython</span> <span class="pre">-pylab</span></tt>.
-For those familiar with MATLAB, see <a class="reference" href="http://www.scipy.org/NumPy_for_Matlab_Users">NumPy for MATLAB Users</a> . After that, just import what
-you need from the vasputil module and get going! See the python scripts for
-reference, or <tt class="docutils literal"><span class="pre">pydoc</span> <span class="pre">vasputil</span></tt>, <tt class="docutils literal"><span class="pre">pydoc</span> <span class="pre">vasputil.supercell</span></tt> etc. to read
-documentation, or the <tt class="docutils literal"><span class="pre">?</span></tt> operator in IPython.</p>
-</div>
-</div>
-</div>
-</body>
-</html>
